polish: fix archive overflow

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -35,6 +35,7 @@
   .archive {
     flex-basis: 68%;
     margin-left: 2%;
+    overflow: auto;
 
     h1,
     h2,
